Clean up warnings and typos.